# Spartakiade2017

./: .gitignore  README.md
Countdown/: Countdown.cabal  LICENSE  readme.md
Countdown/client/: Kommunikation.elm  elm-package.json  main.elm
Countdown/src/lib/Countdown/: Completion.hs  Expressions.hs  Game.hs  Lists.hs  Parser.hs
Countdown/src/lib/Countdown/Game/: Attempts.hs  Challanges.hs  Players.hs  Random.hs  Round.hs
Countdown/src/test/: Spec.hs
Countdown/src/test/Countdown/: AttemptsSpecs.hs  ParserSpec.hs
Countdown/src/web/: AppState.hs  GameLoop.hs  Main.hs
Countdown/static/: client.js  index.html
Elm/: Workshop.md  readme.md
Elm/Calc/: Calc.elm  elm.js  index.html  main.elm
Elm/Starter/: index.html
Elm/Starter/Bootstrap/: Main.elm  elm-package.json
Elm/Tests/: elm-package.json
Elm/Tests/src/: Komm.elm
Elm/Tests/tests/: Tests.elm  elm-package.json
Elm/Uhr/: Uhr.elm  elm-package.json
Haskell/: Workshop.md  readme.md
